<resources>
    <string name="app_name">MobileProject</string>
    <string name="title_screen_usage">Total spending by modal</string>
    <string name="title_screen_savings">Possible changes</string>
    <string name="title_screen_modals">General usage for users</string>
    <string name="car_heading_modal">Car</string>
    <string name="bike_heading_modal">Bike</string>
    <string name="subway_heading_modal">Subway</string>
    <string name="bus_heading_modal">Bus</string>
    <string name="total_heading_modal">Total</string>

</resources>