<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SavingsActivity">



        <TextView
            android:id="@+id/usageHeader"
            android:layout_width="360dp"
            android:layout_height="24dp"
            android:text="@string/title_screen_savings"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />


        <!-- Car -->

        <TextView
            android:id="@+id/carText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_heading_modal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.109" />

        <ProgressBar
            android:id="@+id/carUsage"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.156" />

        <TextView
            android:id="@+id/carPercentageUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60%"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.164" />

        <ProgressBar
            android:id="@+id/carSaving"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.225" />

        <TextView
            android:id="@+id/carPercentageSaving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60%"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23" />

        <ProgressBar
            android:id="@+id/carSpent"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.295" />

        <TextView
            android:id="@+id/carSpentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 650,00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <ProgressBar
            android:id="@+id/carSpentSaving"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.367" />

        <TextView
            android:id="@+id/carSpentSavingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 650,00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.37" />


        <!--  Subway  -->

        <ProgressBar
            android:id="@+id/subwayUsage"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <ProgressBar
            android:id="@+id/subwaySaving"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.571" />

        <TextView
            android:id="@+id/subwayPercentageSaving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60%"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.903"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567" />

        <ProgressBar
            android:id="@+id/subwaySpent"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.641" />

        <TextView
            android:id="@+id/subwaySpentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 650,00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.639" />

        <ProgressBar
            android:id="@+id/subwaySpentSaving"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713" />

        <TextView
            android:id="@+id/subwaySpentSavingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 650,00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.709" />

        <TextView
            android:id="@+id/subwayPercentageUsage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60%"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.901"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subwayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subway_heading_modal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.445" />

        <TextView
            android:id="@+id/totalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_heading_modal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.776" />

        <ProgressBar
            android:id="@+id/totalSpent"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.852" />

        <TextView
            android:id="@+id/totalSpentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 900,00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.845" />

        <ProgressBar
            android:id="@+id/totalSpentSaving"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="317dp"
            android:layout_height="34dp"
            android:scaleY="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.925" />

        <TextView
            android:id="@+id/totalSpentSavingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="R$ 810,00"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.915" />





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>